# veadk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yaml  publish-tag-to-pypi.yaml  push_doc_to_archive.yaml  push_doc_to_preview.yaml
docs/: .gitignore  mkdocs.yml  requirements.txt
docs/docs/: __init__.py  best-practice-advanced.md  cli.md  configuration.md  deploy.md  design.md  evaluation.md  index.md  optimization.md  quickstart.md  runner.md  troubleshooting.md  veadk.md
docs/docs/agent/: __init__.py  agent-to-agent.md  agent.md  agents.md  overview.md  root_agent.py
docs/docs/auth/: api-key-outbound.md  oauth2-m2m-outbound.md  oauth2-user-federation-outbound.md  overview.md  trusted-mcp-outbound.md
docs/docs/gallery/: agent-gallery.md  app-gallery.md
docs/docs/ide/: snippets.md  txt.md
docs/docs/knowledgebase/: best-practice-knowledgebase.md  overview.md
docs/docs/memory/: best-practice-memory.md  long-term-memory.md  short-term-memory.md
docs/docs/observation/: span-attributes.md  tracing.md  ve-tracing.md
docs/docs/references/: api.md  contributing.md  license.md
docs/docs/stylesheets/: extra.css
docs/docs/tools/: builtin.md  function.md
docs/examples/memory/: long_mem_viking_agent.py  short_mem_mysql_agent.py
docs/examples/runner/: run_async.py  run_sync.py
docs/examples/tracing/: tracing_exporter.py
examples/frontend_multi_agent/: __init__.py  agent.py
examples/generated_agentkit_project/: .env.example  README.md  app.py  requirements.txt
examples/piagent_with_mcp/: Dockerfile  README.md
frontend/: README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/adk/: client.ts  connections.ts  identity.ts  newChatCapabilities.ts  runSseError.ts  sandbox.ts  sse.ts  timeout.ts
frontend/src/create/: CustomCreate.css  CustomCreate.tsx  IntelligentCreate.tsx  LocalPicker.tsx  MarkdownPromptEditor.tsx  SkillHubPicker.tsx  SkillSpacePicker.tsx  TemplateCreate.tsx  WorkflowCreate.css  WorkflowCreate.tsx  agentNameValidation.ts  agentTypeMeta.tsx  codegen.ts  configYaml.ts  deploymentEnv.ts  displayText.ts  normalizeDraft.ts  types.ts  veadkCatalog.ts
frontend/src/ui/: AgentSelector.tsx  AgentTopology.tsx  CodeBrowserDialog.css  CodeBrowserDialog.tsx  Composer.tsx  DeployIcon.tsx  LoginPage.tsx  ManageAgents.css  ManageAgents.tsx  Markdown.tsx  ProjectPreview.css  ProjectPreview.tsx  QuickCreate.tsx  SandboxLaunchDialog.tsx  SandboxSession.css  SandboxSession.tsx  Search.tsx  Sidebar.tsx  SkillCenter.tsx  TraceDrawer.tsx  composerKeyboard.ts
frontend/tests/: agentNameValidation.test.mjs  agentSelectorInfo.test.mjs  builtinToolStatus.test.mjs  composerKeyboard.test.mjs  composerPresentation.test.mjs  debugErrorPresentation.test.mjs  deploymentConfigUi.test.mjs  deploymentEnv.test.mjs  deploymentIcon.test.mjs  identity.test.mjs  manageAgentsConnection.test.mjs  markdownPromptEditor.test.mjs  newChatComposerLayout.test.mjs  newChatModeCapabilities.test.mjs  parseSSE.test.mjs  runSseError.test.mjs  sandboxSessionPresentation.test.mjs  siteBranding.test.mjs  skillCenter.test.mjs  skillCreateMode.test.mjs  studioAccess.test.mjs  timeout.test.mjs  viteProxy.test.mjs
samples/: a2a_agent_run.py  call_remote.py  vector_verify.py  verify_kb.py  verify_ltm.py  viking_verify.py
tests/: test_agent.py  test_ve_tos.py
tests/a2a/: test_registry_client.py
tests/auth/veauth/: test_ark_veauth.py
tests/cli/: test_frontend_branding.py  test_frontend_deploy_errors.py  test_frontend_runtime_proxy.py  test_frontend_sandbox.py  test_frontend_skill_creator.py  test_frontend_skill_spaces.py  test_frontend_trace.py  test_generated_agent_backend_codegen.py  test_generated_agent_backend_codegen_extended.py  test_generated_agent_component_matrix.py  test_studio_deploy_serverless_iam.py  test_studio_deploy_target.py  test_studio_rbac.py  test_studio_sandbox_tools.py  test_studio_update.py
tests/cloud/: test_harness_app_contract.py  test_harness_skill_download.py
tests/integrations/agentkit/: test_app.py
tests/models/: test_ark_llm_context_management.py  test_ark_llm_fallbacks.py
tests/tools/builtin_tools/: test_run_sandbox_agent.py
veadk/: agent.py  consts.py  runner.py  version.py
veadk/a2a/: registry_client.py
veadk/auth/veauth/: ark_veauth.py
veadk/cli/: _frontend_deploy_iam.py  _frontend_deploy_policy.py  cli.py  cli_frontend.py  frontend_branding.py  frontend_sandbox.py  frontend_skill_creator.py  frontend_trace.py  generated_agent_catalog.py  generated_agent_codegen.py  generated_agent_security.py  generated_agent_skills.py  generated_agent_test_runner.py  studio_package.py  studio_rbac.py  studio_sandbox_tools.py  studio_update.py
veadk/cloud/: cloud_agent_engine.py
veadk/cloud/harness_app/: app.py  types.py  utils.py
veadk/database/: database_adapter.py
veadk/integrations/agentkit/: __init__.py  app.py
veadk/integrations/ve_apig/: ve_apig.py
veadk/integrations/ve_faas/: ve_faas.py
veadk/integrations/ve_identity/: identity_client.py
veadk/integrations/ve_tos/: ve_tos.py
veadk/knowledgebase/: knowledgebase.py
veadk/memory/: long_term_memory.py
veadk/models/: ark_llm.py  ark_llm_new.py  ark_transform_new.py
veadk/runtime/codex/: proxy.py  runtime.py  skills.py  tools_bridge.py
veadk/skills/: skill.py  utils.py
veadk/tools/builtin_tools/: a2a_hub.py  execute_skills.py  run_sandbox_agent.py
veadk/tools/skills_tools/: skills_toolset.py
veadk/tracing/telemetry/: telemetry.py
veadk/utils/: a2a_utils.py  logger.py  patches.py
veadk/webui/: index.html
veadk/webui/assets/: CodeEditor-BZVQzUnb.js  CodeEditor-Cg86jF8l.js  CodeEditor-ChtzxisI.js  CodeEditor-CowbpekP.js  CodeEditor-DHRG2Qm0.js  CodeEditor-Df8_ws7M.js  CodeEditor-tMYteBoP.js  MarkdownPromptEditor-9W4IUUWc.js  MarkdownPromptEditor-AjIkgV7r.js  MarkdownPromptEditor-CW6yLSZ7.js  MarkdownPromptEditor-C_FYEF2Y.js  MarkdownPromptEditor-D4uxv_bV.js  MarkdownPromptEditor-ZH9qtki0.css  MarkdownPromptEditor-muRnFjBk.js  index-B4UIwC7t.js  index-BORRXdOA.css  (+22 more)
(+43 files in other folders)
